--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,9 @@ on: [push]
 
 jobs:
     tests:
+        runs-on: ubuntu-latest
+
+        steps:
             - name: Install Node.js dependencies
               run: npm ci
 
