--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "A simple currency input for vue3 that works as expected.",
 	"main": "./src/Components/CurrencyInput.vue",
 	"scripts": {
+        "build": "vue-tsc && vite build",
 		"test": "vitest --run ./tests"
 	},
 	"devDependencies": {
@@ -17,9 +18,9 @@
 		"vitest": "^0.32.2",
 		"vue-tsc": "^1.2.0"
 	},
-	"dependencies": {
-		"vue": "^3.3.4"
-	},
+    "peerDependencies": {
+        "vue": "^3.0.0"
+      },
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/mudandstars/vue-simple-currency"
