--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,3 +12,6 @@ jobs:
 
             - name: Run Vitests
               run: npm run test
+
+            - name: Build
+              run: npm run build
