feat: default is processed properly

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,33 @@
 {
 	"compilerOptions": {
-		"allowJs": false,
-		"module": "ESNext",
-		"moduleResolution": "bundler",
-		"jsx": "preserve",
-		"strict": true,
-		"isolatedModules": true,
 		"target": "ESNext",
+        "useDefineForClassFields": true,
+		"module": "ESNext",
+		"moduleResolution": "Node",
+		"strict": true,
+		"jsx": "preserve",
+        "sourceMap": true,
+        "resolveJsonModule": true,
+		"isolatedModules": true,
 		"esModuleInterop": true,
+        "lib": ["ESNext", "DOM"],
+		"skipLibCheck": true,
+        "declaration": true,
+        "outDir": "./dist",
+
 		"forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
 		"noImplicitAny": true /* Enable error reporting for expressions and declarations with an implied 'any' type. */,
 		"strictNullChecks": true /* When type checking, take into account 'null' and 'undefined'. */,
 		"alwaysStrict": true /* Ensure 'use strict' is always emitted. */,
 		"noFallthroughCasesInSwitch": true /* Enable error reporting for fallthrough cases in switch statements. */,
-		"noEmit": true,
-		"skipLibCheck": true,
 		"paths": {
 			"@/*": ["./src/*"]
-		}
+		},
 	},
-	"include": ["./src/**/*.ts", "./src/**/*.vue", "./tests"]
+	"include": [
+        "./src/**/*.ts",
+        "./src/**/*.d.ts",
+        "./src/**/*.vue",
+         "./tests"
+        ]
 }
