--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
 	"name": "vue-simple-currency",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"description": "A simple currency input for vue3 that works as expected.",
-    "main": "dist/VueSimpleCurrency.cjs.js",
-    "module": "dist/VueSimpleCurrency.es.js",
-    "unpkg": "dist/VueSimpleCurrency.umd.js",
-    "files": [
-      "dist"
-    ],
-    "scripts": {
-        "build": "vue-tsc && vite build",
+	"type": "module",
+	"files": [
+		"dist"
+	],
+	"main": "./dist/simple-currency.umd.cjs",
+	"module": "./dist/simple-currency.js",
+	"types": "dist/src/main.d.ts",
+	"exports": {
+		".": {
+			"import": "./dist/simple-currency.js",
+			"require": "./dist/simple-currency.umd.js",
+			"types": "./dist/src/main.d.ts"
+		}
+	},
+	"scripts": {
+		"build": "vite build && vue-tsc --declaration --emitDeclarationOnly",
 		"test": "vitest --run ./tests"
 	},
 	"devDependencies": {
 		"@testing-library/dom": "^9.3.1",
+		"@types/node": "^20.4.10",
 		"@vitejs/plugin-vue": "^4.2.3",
 		"@vue/test-utils": "^2.4.1",
 		"jsdom": "^22.1.0",
@@ -21,11 +30,11 @@
 		"prettier": "^2.8.8",
 		"vite": "^4.0.0",
 		"vitest": "^0.32.2",
-		"vue-tsc": "^1.2.0"
+		"vue-tsc": "^1.8.8"
 	},
-    "peerDependencies": {
-        "vue": "^3.0.0"
-      },
+	"peerDependencies": {
+		"vue": "^3.0.0"
+	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/mudandstars/vue-simple-currency"
